--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,28 +4,22 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      - name: Fix permissions for Vitest
-        run: chmod +x ./node_modules/.bin/vitest
-
-      - name: Run tests
-        run: npx vitest
+    - name: Run tests
+      run: npm test
